# got.cpp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  got_ocr.py  main.ipynb  model_script.py
.cargo/: config.toml
.github/workflows/: windows.yml
cpp/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
cpp/prebuild/lib/: ggml-base.lib  ggml-cpu.lib  ggml.lib  libocr.exp  libocr.lib
cpp/src/: libocr.cpp  libocr.h
src/: args.rs  ffi.rs  got_encoder.rs  got_image_processor.rs  lib.rs  vit_image_processor.rs
