[package]
name = "got_rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MosRat/got.cpp"
authors = ["MosRat"]
description = "Rust bind and cli for GOT OCR 2.0 with llama.cpp"


[dependencies]
latex2mmlc = { git = "https://github.com/tmke8/latex2mmlc" }
clipboard-win = "5.4.0"
anyhow = "1.0.95"
ort = { git = "https://github.com/MosRat/ort", branch = "dev", features = ["onednn"] }
ndarray = "0.16"
image = "0.25.5"
clap = { version = "4.5.26", features = ["derive"] }

[features]
default = ["vulkan", "directml"]
vulkan = []
directml = ["ort/directml"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
strip = true